--- a/.classpath
+++ b/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry kind="lib" path="C:/TobySpring/jarfiles/org.springframework.core-3.0.7.RELEASE.jar"/>
 	<classpathentry kind="lib" path="C:/TobySpring/jarfiles/org.springframework.expression-3.0.7.RELEASE.jar"/>
 	<classpathentry kind="lib" path="C:/TobySpring/jarfiles/org.springframework.jdbc-3.0.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/TobySpring/jarfiles/com.springsource.org.junit-4.7.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
