--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,7 @@
 	<classpathentry kind="lib" path="C:/TobySpring/jarfiles/com.springsource.javax.mail-1.4.0.jar" sourcepath="C:/Users/김승현/AppData/Local/Temp/.org.sf.feeling.decompiler1580990519975/source/com.springsource.javax.mail-1.4.0-sources.jar"/>
 	<classpathentry kind="lib" path="C:/TobySpring/jarfiles/org.springframework.context.support-3.0.7.RELEASE.jar"/>
 	<classpathentry kind="lib" path="C:/TobySpring/jarfiles/mockito-all-1.10.19.jar"/>
+	<classpathentry kind="lib" path="C:/TobySpring/jarfiles/com.springsource.org.aopalliance-1.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/TobySpring/jarfiles/org.springframework.aop-3.0.7.RELEASE.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
